--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "less": "^2.7.1",
     "mocha": "^2.3.4",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node./server.js"
   },
   "repository": {
     "type": "git",
