微信小程序实验…………

--- a/quickstart/app.json
+++ b/quickstart/app.json
@@ -1,12 +1,12 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/home/home"
   ],
   "window":{
-    "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "李三姐麻辣烫",
     "navigationBarTextStyle":"black"
   }
 }
